application/pattern/gitops/flux/ingress.yaml
# kubectl -n flux-system apply -f ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ww-gitops-weave-gitops
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
spec:
  ingressClassName: public
  rules:
    - host: flux.ops.onxp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: ww-gitops-weave-gitops
                port: 
                  number: 9001
  tls:
    - hosts:
        - flux.ops.onxp.net
      secretName: tls-secret-ops-gitops
